--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,22 @@ services:
         - MLMONITOR_DATABASE_URI=postgresql://postgres:postgres@postgres/postgres
       depends_on:
         - postgres
+    metabase:
+      image: metabase/metabase
+      restart: always
+      ports:
+        - 3001:3000
+      volumes:
+        # declare your mount volume /host/dir:/container/dir
+        - /home/app/metabase-data:/metabase-data
+      environment:
+        MB_DB_TYPE: postgres
+        MB_DB_DBNAME: postgres
+        MB_DB_PORT: 5432
+        MB_DB_USER: postgres
+        MB_DB_PASS: postgres
+        MB_DB_HOST: postgres
+      depends_on:
+        - postgres
+      links:
+        - postgres
